--- a/apode/doc/Tutorial.ipynb
+++ b/apode/doc/Tutorial.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,11 +90,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
        "ApodeData(data=    x\n",
        "0  23\n",
@@ -109,7 +176,7 @@
        "9   9, varx='x', poverty=PovertyMeasures(idf=...), inequality=InequalityMeasures(idf=...), polarization=PolarizationMeasures(idf=...), concentration=ConcentrationMeasures(idf=...), welfare=WelfareMeasures(idf=...))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,60 +211,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generar datos\n",
-    "n = 1000 # observaciones\n",
-    "#j_d = 6  # elegir distribción\n",
-    "#rg = np.random.default_rng(12345)\n",
-    "# listd ['uniform','lognormal','exponential','pareto','chisquare','gamma','weibull']\n",
-    "#fdistr = listd[j_d]\n",
-    "\n",
-    "#df2 = distribution_examples(rg,fdistr,n)\n",
-    "seed = 12345\n",
-    "dr2 = make_weibull(seed=seed,size=n)\n",
-    "\n",
-    "# Crear objeto (sin agrupamiento)\n",
-    "#dr2 = ApodeData(df2,varx=\"x\") \n",
-    "\n",
-    "# Graficar distribución\n",
-    "#sns.distplot(df2).set_title(fdistr)\n",
-    "#plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "ApodeData(data=             x\n",
-       "0    95.840214\n",
-       "1    26.247604\n",
-       "2    17.284023\n",
-       "3    18.707548\n",
-       "4    44.467101\n",
-       "..         ...\n",
-       "995   1.313616\n",
-       "996  43.827177\n",
-       "997  62.377600\n",
-       "998  31.261126\n",
-       "999  25.725016\n",
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
        "\n",
-       "[1000 rows x 1 columns], varx='x', poverty=PovertyMeasures(idf=...), inequality=InequalityMeasures(idf=...), polarization=PolarizationMeasures(idf=...), concentration=ConcentrationMeasures(idf=...), welfare=WelfareMeasures(idf=...))"
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>45.408376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>30.207372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.112876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>22.363891</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>39.404779</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>62.690946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>190.596705</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 x\n",
+       "count  1000.000000\n",
+       "mean     45.408376\n",
+       "std      30.207372\n",
+       "min       0.112876\n",
+       "25%      22.363891\n",
+       "50%      39.404779\n",
+       "75%      62.690946\n",
+       "max     190.596705"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2"
+    "# Generar datos\n",
+    "# list1 = ['uniform','lognormal','exponential','pareto','chisquare','gamma','weibull']\n",
+    "# list2 = ['constant',linear','squared','extreme','unimodal','bimodal']\n",
+    "\n",
+    "n = 1000 # observaciones\n",
+    "seed = 12345\n",
+    "dr2 = make_weibull(seed=seed,size=n)\n",
+    "dr2.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Graficar distribución\n",
+    "#sns.distplot(df2).set_title(fdistr)\n",
+    "#plt.show()"
    ]
   },
   {
