--- a/docs/Tutorial.ipynb
+++ b/docs/Tutorial.ipynb
@@ -62,8 +62,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "#from apode.basic import ApodeData\n",
-    "from apode import ApodeData\n",
+    "from apode.basic import ApodeData\n",
     "from apode import datasets "
    ]
   },
