Translates the tutorial to English

--- a/docs/Tutorial.ipynb
+++ b/docs/Tutorial.ipynb
@@ -4,26 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial de Apode\n",
+    "# Apode Tutorial\n",
     "\n",
-    "Este documento muestra la funcionalidad actual del paquete apode. El mismo dispone de varios métodos que calculan medidas y generan gráficos en los siguientes temas:\n",
+    "This document shows the current functionalities of the Apode package. Apode contains various methods to calculate measures and generate graphs on the following topics:\n",
+    "* Poverty\n",
+    "* Inequality\n",
+    "* Welfare\n",
+    "* Polarization\n",
+    "* Concentration\n",
     "\n",
-    "* Pobreza\n",
-    "* Desigualdad\n",
-    "* Bienestar\n",
-    "* Polarización\n",
-    "* Concentración\n",
+    "## ApodeData class\n",
     "\n",
+    "The objects are created as:\n",
     "\n",
-    "## Clase ApodeData\n",
-    "\n",
-    "Los objetos se crean mediante:\n",
-    "\n",
-    "    df = ApodeData(DataFrame,varx)\n",
+    "    df = ApodeData(DataFrame,income_column)\n",
     "    \n",
-    "En donde varx es el nombre de una columna del dataframe.\n",
+    "Where income_column is the name of the column of interest for the analysis in the dataframe.\n",
     "\n",
-    "Metodos que calculan indicadores:\n",
+    "Methods that calculate indicators:\n",
     "   \n",
     "    df.poverty(method,*args)    \n",
     "    df.ineq(method,*args)\n",
@@ -31,7 +29,7 @@
     "    df.polar(method,*args)\n",
     "    df.conc(method,*args)\n",
     " \n",
-    "Métodos que computan gráficos:\n",
+    "Métodos that generate graphs:\n",
     "\n",
     "    df.tip(*args,**kwargs)\n",
     "    df.lorenz(*args,**kwargs)\n",
@@ -46,8 +44,8 @@
    "source": [
     "## Data Creation and Description\n",
     "\n",
-    "* Los datos pueden generarse manualmente o mediante simuación. Estan contenidos en un DataFrame\n",
-    "* Pueden existir otras variables categóricas que permiten aplicar los indicadores por grupos (groupby)"
+    "* Data can be generated manually or by means of a simulation. They are contained in a DataFrame object.\n",
+    "* Other categoric variables that allow for the indicators to be applied by groups (groupby) might be available."
    ]
   },
   {
@@ -59,9 +57,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
     "from apode.basic import ApodeData\n",
     "from apode import datasets "
    ]
@@ -70,9 +65,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Carga manual\n",
+    "## Manual data loading\n",
     "\n",
-    "Se puede crear objeto desde un DataFrame o desde un argumento válido de la funcion DataFrame. La función *binning* se puede usar para agrupar datos."
+    "An object can be generated from a DataFrame or from a valid argument in the DataFrame method. The function *binning* can be used to group the data by number of bins.\n"
    ]
   },
   {
@@ -171,7 +166,7 @@
    "source": [
     "x = [23, 10, 12, 21, 4, 8, 19, 15, 11, 9]\n",
     "df1 = pd.DataFrame({'x':x})\n",
-    "dr1 = ApodeData(df1, varx=\"x\") \n",
+    "dr1 = ApodeData(df1, income_column=\"x\") \n",
     "\n",
     "dr1"
    ]
@@ -180,9 +175,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simulación \n",
+    "## Data simulation\n",
     "\n",
-    "La función *distribution_examples* brinda algunos ejemplos de distribuciones usuales para modelar la distribución del ingreso."
+    "The module *datasets* contains some distribution examples commonly used to model the income distribution."
    ]
   },
   {
@@ -269,11 +264,11 @@
     }
    ],
    "source": [
-    "# Generar datos\n",
+    "# Generate data\n",
     "# list1 = ['uniform','lognormal','exponential','pareto','chisquare','gamma','weibull']\n",
     "# list2 = ['constant',linear','squared','extreme','unimodal','bimodal']\n",
     "\n",
-    "n = 1000 # observaciones\n",
+    "n = 1000 # observations\n",
     "seed = 12345\n",
     "dr2 = datasets.make_weibull(seed=seed,size=n)\n",
     "dr2.describe()"
@@ -285,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Graficar distribución"
+    "# Plotting the distribution"
    ]
   },
   {
@@ -333,9 +328,9 @@
    "source": [
     "## Poverty\n",
     "\n",
-    "Están implementados diversas medidas de pobreza y la curva TIP (permite comparar gráficamente la pobreza entre distribuciones).\n",
+    "Different poverty measures are implemented, as well as the TIP curve, which allows for a graphic comparison of poverty amongst different distributions.\n",
     "\n",
-    "Todos los métodos requieren la linea de pobreza (pline) y algunos métodos requieren un parámetro adicional (alpha). En algunos casos se aplica un valor por defecto."
+    "All the methods require the poverty line (*pline*) as argument. Some methods require an additional parameter, *alpha*. In some cases, a default value is set for it."
    ]
   },
   {
@@ -547,8 +542,8 @@
     }
    ],
    "source": [
-    "# Evaluar un listado de métodos\n",
-    "lista = [[\"headcount\", None],\n",
+    "# Evaluating a list of poverty methods\n",
+    "pov_list = [[\"headcount\", None],\n",
     "         [\"gap\", None],\n",
     "         [\"severity\",None],\n",
     "         [\"fgt\",1.5],\n",
@@ -565,12 +560,12 @@
     "         [\"hagenaars\",None],\n",
     "         [\"chakravarty\",0.5]]\n",
     "p = []\n",
-    "for elem in lista:\n",
+    "for elem in pov_list:\n",
     "    if elem[1]==None:\n",
     "        p.append(dr2.poverty(elem[0],pline=pline))\n",
     "    else:\n",
     "        p.append(dr2.poverty(elem[0],pline=pline,alpha=elem[1]))\n",
-    "        df_p = pd.concat([pd.DataFrame(lista),pd.DataFrame(p)],axis=1)\n",
+    "        df_p = pd.concat([pd.DataFrame(pov_list),pd.DataFrame(p)],axis=1)\n",
     "df_p.columns = ['method','alpha','measure']\n",
     "df_p   "
    ]
@@ -601,7 +596,7 @@
     }
    ],
    "source": [
-    "# Curva TIP\n",
+    "# TIP curve\n",
     "dr2.plot(\"tip\",pline=pline)"
    ]
   },
@@ -611,7 +606,7 @@
    "source": [
     "## Inequality\n",
     "\n",
-    "Están implementadas 12 medidas de desigualdad y la Curva de Lorenz relativa, gemeralizada y absoluta (permite comparar gráficamente la desigualdad entre distribuciones)"
+    "Twelve inequality measures as well as the relative, generalized and absolute Lorenz Curves are implemented. The Lorenz Curves allow to graphically compare the inequality amongst distributions."
    ]
   },
   {
@@ -638,7 +633,7 @@
     }
    ],
    "source": [
-    "# Evaluar un método \n",
+    "# Evaluate an inequality method\n",
     "q = dr2.inequality('gini')\n",
     "q"
    ]
@@ -808,8 +803,8 @@
     }
    ],
    "source": [
-    "# Evaluar un listado de métodos\n",
-    "lista = [[\"rrange\", None],\n",
+    "# Evaluate a list of inequality methods\n",
+    "ineq_list = [[\"rrange\", None],\n",
     "         [\"rad\", None],\n",
     "         [\"cv\",None],\n",
     "         [\"sdlog\",None],\n",
@@ -827,13 +822,13 @@
     "         [\"atkinson\",1.0],\n",
     "         [\"atkinson\",2.0]]\n",
     "p = []\n",
-    "for elem in lista:\n",
+    "for elem in ineq_list:\n",
     "    if elem[1]==None:\n",
     "        p.append(dr2.inequality(elem[0]))\n",
     "    else:\n",
     "        p.append(dr2.inequality(elem[0],alpha=elem[1]))\n",
     "\n",
-    "df_i = pd.concat([pd.DataFrame(lista),pd.DataFrame(p)],axis=1)\n",
+    "df_i = pd.concat([pd.DataFrame(ineq_list),pd.DataFrame(p)],axis=1)\n",
     "df_i.columns = ['method','alpha','measure']\n",
     "df_i   "
    ]
@@ -844,7 +839,7 @@
    "source": [
     "### Graph measures\n",
     "\n",
-    "Un argumento es plot (valor true por defecto)."
+    "An argument is *plot* (True by default)."
    ]
   },
   {
@@ -866,7 +861,7 @@
     }
    ],
    "source": [
-    "# Curva de Lorenz\n",
+    "# Lorenz Curves\n",
     "dr2.plot.lorenz()"
    ]
   },
@@ -889,7 +884,7 @@
     }
    ],
    "source": [
-    "# Curva de Lorenz Generalizada\n",
+    "# Generalized Lorenz Curve\n",
     "dr2.plot.lorenz(alpha='g')"
    ]
   },
@@ -912,7 +907,7 @@
     }
    ],
    "source": [
-    "# Curva de Lorenz Absoluta\n",
+    "# Absolute Lorenz Curve\n",
     "dr2.plot.lorenz(alpha='a')"
    ]
   },
@@ -945,7 +940,7 @@
    "source": [
     "## Welfare\n",
     "\n",
-    "Están implementadas 5 funciones de bienestar social."
+    "Five social welfare functions are implemented."
    ]
   },
   {
@@ -965,7 +960,7 @@
     }
    ],
    "source": [
-    "# Evaluar un método \n",
+    "# Evaluate a welfare method\n",
     "w = dr2.welfare('sen')\n",
     "w"
    ]
@@ -1079,8 +1074,8 @@
     }
    ],
    "source": [
-    "# Evaluar un listado de métodos\n",
-    "lista = [[\"utilitarian\", None],\n",
+    "# Evaluate a list of welfare methods\n",
+    "wlf_list = [[\"utilitarian\", None],\n",
     "         [\"rawlsian\", None],\n",
     "         [\"sen\",None],\n",
     "         [\"theill\",None],\n",
@@ -1090,13 +1085,13 @@
     "         [\"isoelastic\",2],\n",
     "         [\"isoelastic\",np.Inf]]\n",
     "p = []\n",
-    "for elem in lista:\n",
+    "for elem in wlf_list:\n",
     "    if elem[1]==None:\n",
     "        p.append(dr2.welfare(elem[0]))\n",
     "    else:\n",
     "        p.append(dr2.welfare(elem[0],alpha=elem[1]))\n",
     "\n",
-    "df_w = pd.concat([pd.DataFrame(lista),pd.DataFrame(p)],axis=1)\n",
+    "df_w = pd.concat([pd.DataFrame(wlf_list),pd.DataFrame(p)],axis=1)\n",
     "df_w.columns = ['method','alpha','measure']\n",
     "df_w   "
    ]
@@ -1107,7 +1102,7 @@
    "source": [
     "## Polarization \n",
     "\n",
-    "Están implementados 2 medidas de polarización."
+    "Two polarization measures are implemented."
    ]
   },
   {
@@ -1127,7 +1122,7 @@
     }
    ],
    "source": [
-    "# Evaluar un método \n",
+    "# Evaluate a polarization method\n",
     "p = dr2.polarization('ray')\n",
     "p"
    ]
@@ -1192,16 +1187,16 @@
     }
    ],
    "source": [
-    "# Evaluar un listado de métodos\n",
-    "lista = [[\"ray\", None],\n",
+    "# Evaluate a list of polarization methods\n",
+    "pol_list = [[\"ray\", None],\n",
     "         [\"wolfson\", None]]\n",
     "p = []\n",
-    "for elem in lista:\n",
+    "for elem in pol_list:\n",
     "    if elem[1]==None:\n",
     "        p.append(dr2.polarization(elem[0]))\n",
     "    else:\n",
     "        p.append(dr2.polarization(elem[0],alpha=elem[1]))\n",
-    "df_pz = pd.concat([pd.DataFrame(lista),pd.DataFrame(p)],axis=1)\n",
+    "df_pz = pd.concat([pd.DataFrame(pol_list),pd.DataFrame(p)],axis=1)\n",
     "df_pz.columns = ['method','alpha','measure']\n",
     "df_pz "
    ]
@@ -1212,7 +1207,7 @@
    "source": [
     "## Concentration\n",
     "\n",
-    "Están implementadas 4 medidas de concentración (de uso comun para analizar la concentración industrial)."
+    "Four concentration measures commonly used to analyze industrial concentration are implemented."
    ]
   },
   {
@@ -1232,7 +1227,7 @@
     }
    ],
    "source": [
-    "# Evaluar un método\n",
+    "# Evaluate a concentration method\n",
     "c = dr2.concentration('herfindahl')\n",
     "c"
    ]
@@ -1318,25 +1313,25 @@
     }
    ],
    "source": [
-    "# Evaluar un listado de métodos\n",
-    "lista = [[\"herfindahl\", None],\n",
+    "# Evaluate a list of concentration methods\n",
+    "conc_list = [[\"herfindahl\", None],\n",
     "         [\"herfindahl\", True],\n",
     "         [\"rosenbluth\",None],\n",
     "         [\"concentration_ratio\",1],\n",
     "         [\"concentration_ratio\",5]]\n",
     "p = []\n",
-    "for elem in lista:\n",
+    "for elem in conc_list:\n",
     "    if elem[1]==None:\n",
     "        p.append(dr2.concentration(elem[0]))\n",
     "    else:\n",
     "        if elem[0]==\"herfindahl\":\n",
-    "            p.append(dr2.concentration(elem[0],normalized=elem[1]))  # ver keyword\n",
+    "            p.append(dr2.concentration(elem[0],normalized=elem[1]))  # check keyword\n",
     "        elif elem[0]==\"concentration_ratio\":\n",
-    "            p.append(dr2.concentration(elem[0],k=elem[1]))  # ver keyword            \n",
+    "            p.append(dr2.concentration(elem[0],k=elem[1]))  # check keyword            \n",
     "        else:\n",
     "            p.append(dr2.concentration(elem[0],alpha=elem[1]))\n",
     "\n",
-    "df_c = pd.concat([pd.DataFrame(lista),pd.DataFrame(p)],axis=1)\n",
+    "df_c = pd.concat([pd.DataFrame(conc_list),pd.DataFrame(p)],axis=1)\n",
     "df_c.columns = ['method','alpha','measure']\n",
     "df_c "
    ]
@@ -1349,7 +1344,7 @@
     "\n",
     "## Decomposition\n",
     "\n",
-    "Los medidas pueden aplicarse por subrgrupos de acuerdo a cierta categoría. Por ejemplo:"
+    "The measures can be applied in subgroups according to a certain category. For instance:"
    ]
   },
   {
@@ -1492,9 +1487,9 @@
     }
    ],
    "source": [
-    "# calculo simple\n",
+    "# simple calculation\n",
     "pline = 11\n",
-    "dra1 = ApodeData(dfa,varx='x') \n",
+    "dra1 = ApodeData(dfa,income_column='x') \n",
     "p1 = dra1.poverty('headcount',pline=pline)\n",
     "p1"
    ]
@@ -1505,23 +1500,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# recibe un dataframe y aplica medida de acuerdo a columna \"varg\"\n",
+    "# receives a dataframe and applies a measure according to the column \"varg\"\n",
+    "\n",
     "def poverty_gby(dfa,method,varg,pline):\n",
     "    grouped = dfa.groupby(varg)\n",
     "    a = []\n",
     "    b = []\n",
     "    c = []\n",
-    "    varx = 'x'\n",
+    "    income_column = 'x'\n",
     "    for name, group in grouped:\n",
-    "        y = group[varx].values\n",
+    "        y = group[income_column].values\n",
     "        count = group.shape[0]\n",
-    "        dri = ApodeData({varx:y},varx=varx)\n",
+    "        dri = ApodeData({income_column:y},income_column=income_column)\n",
     "        p = dri.poverty(method,pline=pline)\n",
     "        a.append(name)\n",
     "        b.append(p)\n",
     "        c.append(count)\n",
-    "    xname = varx + \"_measure\"\n",
-    "    wname =varx + \"_weight\"\n",
+    "    xname = income_column + \"_measure\"\n",
+    "    wname =income_column + \"_weight\"\n",
     "    return pd.DataFrame({xname: b, wname: c}, index=pd.Index(a))    "
    ]
   },
@@ -1582,7 +1578,7 @@
     }
    ],
    "source": [
-    "# calculo por grupos según variable \"y\"\n",
+    "# group calculation according to variable \"y\"\n",
     "p2 = poverty_gby(dfa,'headcount',varg='y', pline=pline)\n",
     "p2"
    ]
@@ -1604,7 +1600,7 @@
     }
    ],
    "source": [
-    "# Si el indicador es descomponible se obtiene el mismo resultado:\n",
+    "# If the indicator is decomposable, the same result is attained:\n",
     "p2_p = sum(p2['x_measure']*p2['x_weight']/sum(p2['x_weight']))\n",
     "p2_p"
    ]
