--- a/docs/source/Tutorial.ipynb
+++ b/docs/source/Tutorial.ipynb
@@ -7,6 +7,7 @@
     "# Apode Tutorial\n",
     "\n",
     "This document shows the current functionalities of the Apode package. Apode contains various methods to calculate measures and generate graphs on the following topics:\n",
+    "\n",
     "* Poverty\n",
     "* Inequality\n",
     "* Welfare\n",
@@ -50,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from apode.basic import ApodeData\n",
+    "from apode import ApodeData\n",
     "from apode import datasets "
    ]
   },
@@ -155,7 +156,7 @@
        "6  19\n",
        "7  15\n",
        "8  11\n",
-       "9   9, varx='x', poverty=PovertyMeasures(idf=...), inequality=InequalityMeasures(idf=...), polarization=PolarizationMeasures(idf=...), concentration=ConcentrationMeasures(idf=...), welfare=WelfareMeasures(idf=...), plot=PlotAccsesor(idf=...))"
+       "9   9, income_column='x', poverty=PovertyMeasures(idf=...), inequality=InequalityMeasures(idf=...), polarization=PolarizationMeasures(idf=...), concentration=ConcentrationMeasures(idf=...), welfare=WelfareMeasures(idf=...), plot=PlotAccsesor(idf=...))"
       ]
      },
      "execution_count": 4,
