--- a/docs/source/Tutorial.ipynb
+++ b/docs/source/Tutorial.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Apode Tutorial\n",
     "\n",
-    "This document shows the current functionalities of the Apode package. Apode contains various methods to calculate measures and generate graphs on the following topics:\n",
+    "This tutorial shows the current functionalities of the Apode package. Apode contains various methods to calculate measures and generate graphs on the following topics:\n",
     "\n",
     "* Poverty\n",
     "* Inequality\n",
@@ -14,7 +14,10 @@
     "* Polarization\n",
     "* Concentration\n",
     "\n",
-    "## ApodeData class\n",
+    "\n",
+    "## Getting Started\n",
+    "\n",
+    "### ApodeData class\n",
     "\n",
     "The objects are created as:\n",
     "\n",
@@ -43,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Creation and Description\n",
+    "### Data Creation and Description\n",
     "\n",
     "* Data can be generated manually or by means of a simulation. They are contained in a DataFrame object.\n",
     "* Other categoric variables that allow for the indicators to be applied by groups (groupby) might be available."
@@ -66,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Manual data loading\n",
+    "### Manual data loading\n",
     "\n",
     "An object can be generated from a DataFrame or from a valid argument in the DataFrame method. The function *binning* can be used to group the data by number of bins.\n"
    ]
@@ -175,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data simulation\n",
+    "### Data simulation\n",
     "\n",
     "The module *datasets* contains some distribution examples commonly used to model the income distribution."
    ]
@@ -319,14 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Measures"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Poverty\n",
+    "## Poverty \n",
     "\n",
     "Different poverty measures are implemented, as well as the TIP curve, which allows for a graphic comparison of poverty amongst different distributions.\n",
     "\n",
@@ -604,7 +600,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inequality\n",
+    "## Inequality \n",
     "\n",
     "Twelve inequality measures as well as the relative, generalized and absolute Lorenz Curves are implemented. The Lorenz Curves allow to graphically compare the inequality amongst distributions."
    ]
@@ -1340,9 +1336,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tools\n",
+    "## Tools\n",
     "\n",
-    "## Decomposition\n",
+    "### Decomposition\n",
     "\n",
     "The measures can be applied in subgroups according to a certain category. For instance:"
    ]
@@ -1609,7 +1605,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# References\n",
+    "## References\n",
     "\n",
     "* Cowell, F. (2011) Measuring Inequality. London School of Economics Perspectives in Economic Analysis. 3rd ed. Edición. Oxford University Press\n",
     "http://darp.lse.ac.uk/papersDB/Cowell_measuringinequality3.pdf\n",
